# rust-practice

./: README.md
001-hello-world/: main
003-guessing-game/src/: _main.rs  main.rs
004-salary/: Cargo.toml
004-salary/src/: main.rs
005-tried-passwords-cli/: .gitignore  Cargo.toml
005-tried-passwords-cli/src/: main.rs
actix-server/: Cargo.toml
actix-server/src/: main.rs
axum-server/: .gitignore  Cargo.toml
axum-server/src/: main.rs
bevy-snake/: Cargo.toml  notes.md
bevy-snake/src/: main.rs  tutorial.rs
chromium/: Cargo.toml
chromium/src/: main.rs
gpui_hello/: Cargo.toml
gpui_hello/src/: main.rs
gpui_input/: Cargo.toml
gtk-ui/: Cargo.toml  README.md
poem-server/: .gitignore  Cargo.toml
poem-server/src/: main.rs
rspc-server/: .env.example  Cargo.toml  Justfile  README.md  bindings.ts  diesel.toml  notes.md
rspc-server/entity/: Cargo.toml
rspc-server/entity/src/entities/: mod.rs  prelude.rs  session.rs  user.rs
rspc-server/migrations/2025-01-18-071915_auth/: down.sql  up.sql
rspc-server/prisma/: schema.prisma
rspc-server/prisma/migrations/20250720161413_auth_schema/: migration.sql
rspc-server/prisma/migrations/20250720161605_rename_tables/: migration.sql
rspc-server/src/: main.rs  models.rs  prisma.rs  schema.rs
rustlings/: .rustlings-state.txt
rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types3.rs  primitive_types5.rs
rustlings/exercises/06_move_semantics/: move_semantics4.rs
rustlings/exercises/09_strings/: strings1.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
seaorm-axum/: .env.example  .gitignore  Cargo.toml  README.md  dev.db  justfile
seaorm-axum/entity/: Cargo.toml
seaorm-axum/entity/src/entities/: auth_user.rs  goose_db_version.rs  mod.rs  oauth_account.rs  onetime_token.rs  prelude.rs  route.rs  session.rs  spatial_ref_sys.rs  user.rs  user_session.rs
seaorm-axum/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250720_135746_post_date.rs
seaorm-axum/src/: main.rs
slint-memory/src/: main.rs
sql-gen-prisma/: .env.example  .gitignore  Cargo.toml  docker-compose.dev.yml  justfile
sql-gen-prisma/prisma/migrations/20250718120950_auth_schema/: migration.sql
sql-gen-prisma/prisma/models/: auth.prisma
sql-gen-prisma/src/: main.rs
sql-gen-prisma/src/models/: mod.rs  prisma_migration.rs  session.rs  user.rs
(+1 files in other folders)
