[package]
name = "rspc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rspc = "0.2.0"
rspc-axum = "0.1.1"
serde = "1.0.210"
specta = "1.0.5"
tokio = { version = "1.40.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
serde_json = "1.0.135"
uuidv7 = "0.1.5"
argon2-kdf = "1.5.4"

# [profile.dev]
# opt-level = 1

# [profile.release]
# opt-level = 3
