[package]
name = "rspc-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[dependencies]
entity = { path = "entity" }
axum = "0.7.5"
rspc = "0.2.0"
rspc-axum = "0.1.1"
serde = "1.0.210"
specta = "1.0.5"
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15"
serde_json = "1.0.135"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }


# [profile.dev]
# opt-level = 1

# [profile.release]
# opt-level = 3
