[package]
name = "seaorm-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[workspace]
members = [".", "entity", "migration"]
