[package]
name = "sql-gen-prisma"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls",  "uuid"] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
